# CTF_challenge

./: CONTRIBUTING.md  QUICKREF.md  README.md  pyproject.toml  remove-mcp-server-kali.sh  setup-kali.sh  setup-ubuntu.sh
.github/agents/: crypto.md  forensics.md  misc  mobile.md  network  patching.md  pwn  re.md  stego  web
crypto/: README.md  decode.sh  frequency.py
forensics/: README.md  file-info.py  hidden-strings.sh
misc/: README.md  convert.sh  hash.py
mobile/: README.md  apk-info.py  strings-extract.sh
network/: README.md  http-extract.sh  pcap-analyze.py
patching/: README.md  patch.py  read-offset.sh
pwn/: README.md  checksec.py  strings-grep.sh
re/: README.md  disasm.py  functions.sh
stego/: README.md  lsb-extract.py  metadata.sh
web/: README.md  headers.py  port-scan.sh
